--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,30 @@ jobs:
         run: npm install
 
       - name: Run tests and generate coverage
-        run: npm test -- --coverage --coverageProvider=v8
+        run: npm test
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
+      - name: Save coverage artifacts
+        uses: actions/upload-artifact@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          name: coverage
+          path: coverage
+
+  coveralls:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage
+
+      - name: Install Coveralls
+        run: npm install coveralls
+
+      - name: Send coverage to Coveralls
+        run: cat coverage/tmp/coverage-*.json | npx coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
