--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,6 @@ jobs:
         run: npm install coveralls
 
       - name: Send coverage to Coveralls
-        run: cat coverage/tmp/coverage-*.json | npx coveralls
+        run: cat coverage/coverage-*.json | npx coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
