--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 mocha"
+    "test": "c8 --reporter=lcov mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "c8": "^8.0.1",
     "chai": "^4.3.10",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0"
   }
 }
