--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 --reporter=lcov mocha"
+    "test": "c8 --reporter=lcov mocha",
+    "coverage": "c8 report"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "c8": "^8.0.1",
     "chai": "^4.3.10",
+    "coveralls": "^3.1.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0"
   }
